# MathLib

./: CMakeLists.txt  README.md  README_8md.html  annotated.html  classQuaternion-members.html  classQuaternion.html  classVector-members.html  classVector.html  classes.html  defines_8h.html  defines_8h_source.html  dir_415e694e93811b5d697a810ff00d69f3.html  dir_d44c64559bbebec7f509842c48db8b23.html  example.cpp  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  index.html  mathlib_8h.html  mathlib_8h_source.html  menudata.js  operators_8h.html  operators_8h_source.html  pages.html  quaternion_8h.html  quaternion_8h_source.html  structVector_1_1CommaLoader-members.html  structVector_1_1CommaLoader.html  todo.html  vector_8h.html  vector_8h_source.html
.github/workflows/: docs.yml  test.yml
docs/: CMakeLists.txt  Doxyfile.in
include/mathlib/: defines.h  mathlib  mathlib.h  operators.h  quaternion.h  stream.h  vector.h
search/: all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_2.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  pages_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
tests/: CMakeLists.txt  Test_Defines.cpp  Test_Operators.cpp  Test_Quaternions.cpp  Test_Stream.cpp  Test_Vector.cpp
